Fixed bug causing text (line 14) to not display

--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ body {
     margin-top: 20px;
 }
 
-.btn {
-    /* Styling for individal buttons */
+/* .btn {
+    
 }
 
 .btn:hover {
 
-}
+} */
