--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: o;
+    padding: 0;
     margin: 0;
     display: flex;
     align-items: center;
@@ -21,6 +21,7 @@ body {
     text-shadow: 2px 2px 5px whitesmoke;
     background-image: linear-gradient(#333, rgba(255,0,0,0))
 }
+
 
 .container {
     width: 800px;
