--- a/style.css
+++ b/style.css
@@ -37,8 +37,9 @@ body {
 }
 
 img {
+    width: 1000px;
     max-width: 100%;
-    height: 400px;
+    height: 440px;
 }
 
 #text {
@@ -72,4 +73,11 @@ img {
 .btn:active {
     transform: translate(0, 0.3rem);
     box-shadow: 0 0.1rem rgba(251, 109, 16, 0.65);
+}
+
+@media all and (min-width: 480px) and (max-width: 768px) { 
+   .container {
+       width: 90%;
+        max-width: 100%;
+   }
 }
