--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body {
 #navbar {
     width: 100%;
     padding: 10px 0px;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin: auto;
     font-family: 'Henny Penny', cursive;
     font-size: 50px;
@@ -37,7 +36,7 @@ body {
 }
 
 img {
-    width: 1000px;
+    width: auto;
     max-width: 100%;
     height: 440px;
 }
@@ -81,3 +80,14 @@ img {
         max-width: 100%;
    }
 }
+
+@media screen and (orientation:portrait) { 
+
+    #text {
+        font-size: 1.2rem;
+    }
+
+    .btn {
+        font-size: 1.2rem;
+    }
+ }
