--- a/style.css
+++ b/style.css
@@ -23,8 +23,6 @@ body {
     background-image: linear-gradient(#333, rgba(255, 0, 0, 0))
 }
 
-
-
 .container {
     display: flex;
     text-align: center;
@@ -41,6 +39,8 @@ body {
 
 
 img {
+    height: auto;
+    width: auto;
     width: auto;
     max-width: 100%;
     height: 440px;
@@ -78,6 +78,15 @@ img {
     transform: translate(0, 0.3rem);
     box-shadow: 0 0.1rem rgba(251, 109, 16, 0.65);
 }
+
+/* MEDIA QUERIES */
+
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+    img {
+        height: auto;
+        width: auto;
+    }
+ }
 
 @media all and (min-width: 480px) and (max-width: 768px) {
     .container {
