--- a/Assets/css/menu.css
+++ b/Assets/css/menu.css
@@ -1,7 +1,7 @@
 #navbar {
     background-color: #4D3347;
     width: 100%;
-    height: 50px;
+    height: 50x;
     padding: 0px 0px;
     margin: auto;
     font-family: 'Henny Penny', cursive;
@@ -10,6 +10,14 @@
 
 #navbar.button {
     background-color: none;
+    
+}
+
+#music {
+    background-color: #2E2E41;
+    color: rgba(251, 109, 16, 0.65);
+    border: solid;
+    border-radius: 60px;
 }
 
 /* ICONS NAV */
