Dynamic css theme changes

--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -23,6 +23,7 @@ body {
     padding: 0;
     margin: 0;
     display: flex;
+    color: var(--background);
     align-items: center;
     width: 100vw;
     flex-direction: column;
