--- a/Assets/css/menu.css
+++ b/Assets/css/menu.css
@@ -22,10 +22,11 @@
 #navbar {
     z-index: 10;
     position: fixed;
-    background-color: none;
+    background: rgb(255 255 255 / 50%);
     width: 100vw;
-    padding: 0px 0px;
-    margin: auto;
+    padding: 25px;
+    letter-spacing: 3px;
+    width: 100vw;
     font-family: 'Henny Penny', cursive;
     /* text-shadow: 2px 2px 5px whitesmoke; */
 }
@@ -36,7 +37,7 @@
 }
 
 #music {
-    /* background-color: #2E2E41; */
+    margin-left: 25px;
     color: var(--primary-color);
     border: solid;
     border-radius: 60px;
@@ -121,6 +122,7 @@ input:checked+.slider::before {
 .material-icons.md-48 {
     font-size: 48px;
     margin-right: 5px;
+    color: var(--on-background)
 }
 
 #intro {
