--- a/Assets/css/menu.css
+++ b/Assets/css/menu.css
@@ -149,12 +149,12 @@ input:checked+.slider::before {
     height: 2.5rem;
     border: none;
     border-radius: 10px;
-    /* color: white; */
-    /* background-color: #4D3347; */
+    color: white;
+    background-color: #4D3347;
     outline: none;
     margin-top: 30px;
     padding: 0.5rem 1.8rem;
-    /* box-shadow: 0 0.3rem rgba(251, 109, 16, 0.65); */
+    box-shadow: 0 0.3rem var(--primary-color);
 }
 
 .menuBtn:hover {
@@ -163,5 +163,5 @@ input:checked+.slider::before {
 
 .menuBtn:active {
     transform: translate(0, 0.3rem);
-    /* box-shadow: 0 0.1rem rgba(251, 109, 16, 0.65); */
+    box-shadow: 0 0.1rem var(--primary-color);
 }
