--- a/Assets/css/menu.css
+++ b/Assets/css/menu.css
@@ -147,8 +147,8 @@ input:checked+.slider::before {
     height: 2.5rem;
     border: none;
     border-radius: 10px;
-    color: white;
-    background-color: #4D3347;
+    background: var(--background);
+    color: var(--on-background);
     outline: none;
     margin-top: 30px;
     padding: 0.5rem 1.8rem;
@@ -156,7 +156,9 @@ input:checked+.slider::before {
 }
 
 .menuBtn:hover {
-    filter: brightness(110%)
+    filter: brightness(110%);
+    background: var(--primary-color);
+    color: var(--on-primary);
 }
 
 .menuBtn:active {
