--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -34,11 +34,11 @@ body {
 .container {
     text-align: center;
     flex-direction: column;
-    margin: 3vh;
+    margin: 130px;
     max-width: 40%;
     font-family: sans-serif;
-    color: white;
-    background-color: #2E2E41;
+    background: rgb(0 0 0 / 50%);
+    color: var(--on-primary);
     padding: 20px 30px;
     border-radius: 5px;
     box-shadow: 0 0 10px 2px #FB6D10;
@@ -55,6 +55,7 @@ img {
 
 #text {
     font-size: 1.40rem;
+    line-height: 25px;
 }
 
 .btn-grid {
@@ -70,20 +71,22 @@ img {
     height: 2.5rem;
     border: none;
     border-radius: 10px;
-    color: white;
-    background-color: #4D3347;
+    background: var(--background);
+    color: var(--on-background);
     outline: none;
     padding: 0.5rem 1.8rem;
-    box-shadow: 0 0.3rem rgba(251, 109, 16, 0.65);
+    box-shadow: 0 0.3rem var(--primary-color);
 }
 
 .btn:hover {
-    filter: brightness(110%)
+    filter: brightness(110%);
+    background: var(--primary-color);
+    color: var(--on-primary);
 }
 
 .btn:active {
     transform: translate(0, 0.3rem);
-    box-shadow: 0 0.1rem rgba(251, 109, 16, 0.65);
+    box-shadow: 0 0.1rem var(--primary-color);
 }
 
 /* MEDIA QUERIES */
