--- a/Assets/css/menu.css
+++ b/Assets/css/menu.css
@@ -165,3 +165,8 @@ input:checked+.slider::before {
     transform: translate(0, 0.3rem);
     box-shadow: 0 0.1rem var(--primary-color);
 }
+
+button:disabled {
+    opacity: 0.4;
+    cursor: default;
+  }
