--- a/Assets/css/menu.css
+++ b/Assets/css/menu.css
@@ -6,6 +6,7 @@
     --on-background: rgb(66, 66, 66);
     --on-background-alt: rgba(66, 66, 66, 0.7);
     --background: rgb(255, 255, 255);
+    --background-alt: rgb(250, 250, 250);
     --box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
 }
 
@@ -17,6 +18,7 @@
     --on-background: rgba(255, 255, 255, 0.9);
     --on-background-alt: rgba(255, 255, 255, 0.7);
     --background: #121212;
+    --background-alt: rgb(66, 66, 66);
 }
 
 #navbar {
@@ -28,12 +30,6 @@
     letter-spacing: 3px;
     width: 100vw;
     font-family: 'Henny Penny', cursive;
-    /* text-shadow: 2px 2px 5px whitesmoke; */
-}
-
-#navbar.button {
-    background-color: none;
-
 }
 
 #music {
@@ -123,6 +119,10 @@ input:checked+.slider::before {
     font-size: 48px;
     margin-right: 5px;
     color: var(--on-background)
+}
+
+#music {
+    background-color: var(--background-alt);
 }
 
 #intro {
